--- a/src/app/admin/workflows/schedules/schedules.component.html
+++ b/src/app/admin/workflows/schedules/schedules.component.html
@@ -8,47 +8,69 @@
         </button>
       </nz-space>
     </nz-page-header-extra>
+    <nz-page-header-content>
+      <nz-space nzAlign="center">
+        <wpx-keyword
+          *nzSpaceItem
+          [wpxWidth]="240"
+          [wpxModel]="model"
+          [wpxKeys]="['name']"
+          (wpxSubmit)="getData()"
+          wpxPlaceholder="服务名称"
+        ></wpx-keyword>
+        <wpx-toolbox *nzSpaceItem [wpxModel]="model" (wpxClear)="getData()" (wpxRefresh)="getData()"> </wpx-toolbox>
+      </nz-space>
+    </nz-page-header-content>
   </nz-page-header>
 
-  <nz-content style="overflow: hidden auto">
-    <nz-card>
-      <nz-list nzItemLayout="vertical">
-        <nz-list-empty *ngIf="items.length === 0"></nz-list-empty>
-        <nz-list-item *ngFor="let item of items" (contextmenu)="openActions($event, actions, item)">
-          <nz-descriptions nzLayout="vertical" [nzColumn]="3">
-            <nz-descriptions-item nzTitle="名称">
-              {{ item.name }}
-            </nz-descriptions-item>
-            <nz-descriptions-item nzTitle="节点 ID">
-              {{ item.node_id }}
-            </nz-descriptions-item>
-            <nz-descriptions-item nzTitle="状态">
-              <ng-container *ngIf="statusDict.hasOwnProperty(item.node_id) && statusDict[item.node_id]; else stopRef">
-                <nz-tag nzColor="processing">
-                  <span nz-icon nzType="sync" nzSpin></span>
-                  <span>运行中</span>
-                </nz-tag>
-              </ng-container>
-              <ng-template #stopRef>
-                <nz-tag nzColor="error">
-                  <span nz-icon nzType="close-circle"></span>
-                  <span>异常</span>
-                </nz-tag>
-              </ng-template>
-            </nz-descriptions-item>
-          </nz-descriptions>
-        </nz-list-item>
-      </nz-list>
-    </nz-card>
+  <nz-content style="height: 100%">
+    <wpx-list
+      #wpxList
+      [wpxModel]="model"
+      [wpxRender]="render"
+      [wpxActions]="actions"
+      [wpxBodyStyle]="{ height: '100%' }"
+    >
+      <ng-template #render let-item>
+        <nz-descriptions nzLayout="vertical" [nzColumn]="3">
+          <nz-descriptions-item nzTitle="名称">
+            {{ item.name }}
+          </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="所属集群">
+            <ng-container *ngIf="clusterDict[item.cluster_id]">
+              {{ clusterDict[item.cluster_id].name }}
+            </ng-container>
+          </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="状态">
+            <ng-container *ngIf="statusDict[item._id]; else stopRef">
+              <nz-tag nzColor="processing">
+                <span nz-icon nzType="sync" nzSpin></span>
+                <span>运行中</span>
+              </nz-tag>
+            </ng-container>
+            <ng-template #stopRef>
+              <nz-tag nzColor="error">
+                <span nz-icon nzType="close-circle"></span>
+                <span>异常</span>
+              </nz-tag>
+            </ng-template>
+          </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="镜像地址" [nzSpan]="3">
+            {{ item.image }}
+          </nz-descriptions-item>
+        </nz-descriptions>
+      </ng-template>
+    </wpx-list>
   </nz-content>
 </nz-layout>
 
 <nz-dropdown-menu #actions="nzDropdownMenu">
-  <ul *ngIf="activated as v" nz-menu>
+  <ul *ngIf="wpxList.activated as v" nz-menu>
     <li nz-menu-item nzDisabled>
       <b>{{ v.name }}</b>
     </li>
     <li nz-menu-divider></li>
+    <li nz-menu-item (click)="deploy(v)"> 重新部署 </li>
     <li nz-menu-item (click)="openForm(v)"> 修改 </li>
     <li nz-menu-item nzDanger (click)="delete(v)"> 删除 </li>
   </ul>
