--- a/src/app/admin/workflows/form/form.component.html
+++ b/src/app/admin/workflows/form/form.component.html
@@ -26,7 +26,7 @@
     <nz-form-label nzRequired> 工作流类型 </nz-form-label>
     <nz-form-control nzHasFeedback [nzAutoTips]="tips.kind">
       <nz-select formControlName="kind" nzAllowClear nzPlaceHolder="请选择工作流类型">
-        <nz-option nzValue="schedule" nzLabel="定时启用"></nz-option>
+        <nz-option nzValue="schedule" nzLabel="定时启动"></nz-option>
       </nz-select>
     </nz-form-control>
   </nz-form-item>
