--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -21,7 +21,7 @@
           <span nz-icon nzType="schedule" nzTheme="outline"></span>
           <span>工作流</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="queue">
+        <li nz-menu-item nzMatchRouter routerLink="queues">
           <span nz-icon nzType="pull-request" nzTheme="outline"></span>
           <span>消息队列</span>
         </li>
