--- a/src/app/admin/queues/queues.component.html
+++ b/src/app/admin/queues/queues.component.html
@@ -21,11 +21,11 @@
           <li nz-menu-item (click)="basicTable.clearSelections()"> 取消选择 </li>
         </ul>
         <ul nz-menu>
-          <li nz-menu-item nzDanger> 删除 </li>
+          <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
         </ul>
       </nz-dropdown-menu>
     </ng-container>
-    <button *nzSpaceItem nz-button nzType="primary"> 新增 </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="openForm()"> 新增 </button>
   </nz-space>
 </ng-template>
 
@@ -75,7 +75,8 @@
       <b>{{ v.name }}</b>
     </li>
     <li nz-menu-divider></li>
-    <li nz-menu-item> 修改 </li>
-    <li nz-menu-item nzDanger> 删除 </li>
+    <li nz-menu-item (click)="sync(v)">同步</li>
+    <li nz-menu-item (click)="openForm(v)"> 修改 </li>
+    <li nz-menu-item nzDanger (click)="delete(v)"> 删除 </li>
   </ul>
 </nz-dropdown-menu>
