--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -25,7 +25,7 @@
           <span nz-icon nzType="pull-request" nzTheme="outline"></span>
           <span>消息队列</span>
         </li>
-        <li nz-menu-item nzMatchRouter routerLink="im">
+        <li nz-menu-item nzMatchRouter routerLink="imessages">
           <span nz-icon nzType="thunderbolt" nzTheme="outline"></span>
           <span>即时通信</span>
         </li>
