--- a/src/app/admin/workflows/schedules/schedules.component.html
+++ b/src/app/admin/workflows/schedules/schedules.component.html
@@ -68,7 +68,7 @@
 </ng-template>
 
 <nz-dropdown-menu #actions="nzDropdownMenu">
-  <ul *ngIf="wpxList.activated as v" nz-menu>
+  <ul *ngIf="wpxList.actived as v" nz-menu>
     <li nz-menu-item nzDisabled>
       <b>{{ v.name }}</b>
     </li>
