update: ModalData change to FormInput

--- a/src/app/admin/imessages/imessages.component.html
+++ b/src/app/admin/imessages/imessages.component.html
@@ -25,6 +25,7 @@
         </ul>
       </nz-dropdown-menu>
     </ng-container>
+    <button *nzSpaceItem nz-button (click)="openEmqx()"> 服务接入 </button>
     <button *nzSpaceItem nz-button nzType="primary" (click)="openForm()"> 新增 </button>
   </nz-space>
 </ng-template>
