--- a/src/app/admin/imessages/controls/controls.component.html
+++ b/src/app/admin/imessages/controls/controls.component.html
@@ -23,8 +23,8 @@
       <nz-table nzSize="middle" nzTemplateMode>
         <thead>
           <tr>
-            <th nzLeft nzWidth="200px"><b>项目名称</b></th>
-            <th><b>授权主题</b></th>
+            <th nzLeft nzWidth="360px"><b>授权主题</b></th>
+            <th><b>项目名称</b></th>
             <th nzRight nzWidth="100px"><b>消息流入</b></th>
             <th nzRight nzWidth="100px"><b>消息流出</b></th>
             <th nzRight nzWidth="100px"><b>消息废弃</b></th>
@@ -32,15 +32,27 @@
         </thead>
         <tbody>
           <tr *ngFor="let id of doc.projects">
+            <td> {{ doc.topic }}/{{ id }} </td>
             <td>
               <ng-container *ngIf="projectDict[id] as project">
                 {{ project.name }}
               </ng-container>
             </td>
-            <td> {{ doc.topic }}/{{ id }} </td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <td>
+              <ng-container *ngIf="metricsDict[doc.topic + '/' + id] as metric">
+                {{ metric['messages.in.count'] | nzSafeNull }}
+              </ng-container>
+            </td>
+            <td>
+              <ng-container *ngIf="metricsDict[doc.topic + '/' + id] as metric">
+                {{ metric['messages.out.count'] | nzSafeNull }}
+              </ng-container>
+            </td>
+            <td>
+              <ng-container *ngIf="metricsDict[doc.topic + '/' + id] as metric">
+                {{ metric['messages.dropped.count'] | nzSafeNull }}
+              </ng-container>
+            </td>
           </tr>
         </tbody>
       </nz-table>
